# botcircuits-argus

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  IMPLEMENTATION.md  LICENSE  README.md  TODO.txt  main.py  pyproject.toml
.botcircuits/: mcp.json  settings.example.json  settings.json
docs/: comparison-20260627-005303.html  comparison-20260627-005303.md  native-agent.md
evals/: README.md  __init__.py  harness.py  instrument.py  tasks.py  test_task_completion.py  test_tool_correctness.py
manager_web/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: authoring_usage.py  install-skills.sh  install.sh
tests/: fakes.py  test_action_optimizer.py  test_choice_operator.py  test_coding_eval.py  test_coding_pipeline_routing.py  test_coding_route.py  test_coding_subdir.py  test_condition_expression_parse.py  test_engine_exec_observability.py  test_graph_optimizer.py  test_item_resolver.py  test_list_decision.py  test_manager_backend.py  test_manager_supervisor.py  test_memory_location.py  test_native_agent_model_routing.py  test_option_select.py  test_orchestration.py  test_permissions.py  test_provider_openrouter.py  test_provider_usage.py  test_result_render.py  test_run_workflow_select_provider.py  test_runtime_claude_code.py  test_runtime_detect.py  test_runtime_engine_e2e.py  test_runtime_grant_on_reply.py  test_runtime_hermes.py  test_runtime_inline.py  test_runtime_multiplex.py  test_runtime_result.py  test_segments.py  test_sessions_durable.py  test_slot_resolver.py  test_subagents.py  test_tier0_resolver.py  (+15 more)
(+324 files in other folders)
