[project]
name = "botcircuits-agent"
version = "0.1.0"
description = "BotCircuits Agent is a workflow-native AI agent for reliable, predictable, token-efficient multi-step automation without depending on an LLM to drive everything"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tharanga Thennakoon" }]
license = { text = "Apache-2.0" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "google-genai>=0.3.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
evals = [
    "deepeval>=4.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
botcircuits = "botcircuits.cli:main"

[project.urls]
Homepage = "https://github.com/botcircuits-ai/botcircuits-argus"
Issues = "https://github.com/botcircuits-ai/botcircuits-argus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/botcircuits"]

[tool.pytest.ini_options]
# src-layout: make the package importable during collection without a reinstall.
pythonpath = ["src"]
# The evals/ suite runs via `deepeval test run` (needs the deepeval extra); keep
# it out of the default `pytest` collection so unit tests run standalone.
testpaths = ["tests"]
